# RL2048

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE.txt  Makefile  README.md  analyze_results.py  playRL2048.py  playRL2048_dqn.py  playRL2048_random.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
Experiments/: DQN_20240510_134932.json
RL2048/: colors.py  game_engine.py  tile.py  tile_plotter.py
RL2048/DQN/: dqn.py  net.py  replay_memory.py
TrainedNetworks/DQN/keep/20240514_113940/: step_150000.pth
pretrained_model/: model_E_step_186000.pth
rl_2048/: __init__.py  colors.py  common.py  game_engine.py  tile.py  tile_plotter.py
rl_2048/DQN/: dqn.py  net.py  replay_memory.py
rl_2048/dqn/: __init__.py  _dqn_impl.py  common.py  flax_nnx_net.py  jax_net.py  jax_utils.py  protocols.py  replay_memory.py  torch_net.py
rl_2048/dqn/jax/: dqn.py  net.py  replay_memory.py
rl_2048/dqn/torch/: dqn.py  net.py  replay_memory.py
rl_2048/jax_dqn/: dqn.py  net.py  replay_memory.py  utils.py
tests/: test_game_engine.py  test_tile.py
tests/dqn/: test_flax_nnx_net.py  test_jax_dqn.py  test_jax_replay_memory.py  test_jax_utils.py  test_torch_dqn.py  test_torch_net.py
tests/dqn/torch/: test_net.py
tests/jax_dqn/: test_dqn.py  test_replay_memory.py  test_utils.py
